Przygotowywanie do wyswietlenia danych

--- a/strona/Stronaa/Stronaa/appsettings.json
+++ b/strona/Stronaa/Stronaa/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+
+  "ConnectionStrings": {
+    "Connection": "Data Source=sqltester2018.wwsi.edu.pl;Initial Catalog=TestLosek;Persist Security Info=True;User ID=tlosek;Password=Ulaniec!@#"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
